<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lslidar_c16_decoder</name>
  <version>1.2.0</version>
  <description>Point cloud conversions for Leishen C16 LIDARs.</description>
  <maintainer email="yutong@lslidar.com">Yutong</maintainer>
  <author>Yutong</author>
  <license>GNC General Public License V3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>
  <depend>lslidar_c16_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
