<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lslidar_c16_driver</name>
  <version>1.2.0</version>
  <description>ROS2 device driver for Leishen C16 lidar.</description>
  <maintainer email="yutongyan@lslidar.com">Yutong</maintainer>
  <author>Yutong</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>lslidar_c16_msgs</depend>
  <depend>diagnostic_updater</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
